--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -61,13 +61,17 @@
 
     <Button
         android:id="@+id/btn_send"
-        android:layout_marginTop="10dp"
-        android:layout_width="150dp"
-        android:layout_height="75dp"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/delete_button"
-        android:textSize="50sp"
+        android:textSize="28sp"
         android:gravity="center"
         android:layout_gravity="center"
         android:textColor="@color/date_picker_bg"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:text="@string/send"/>
 </LinearLayout>
